Added offline folders for boostrap css and js

--- a/view/src/App.css
+++ b/view/src/App.css
@@ -20,10 +20,8 @@ code {
     monospace;
 }
 
-
 a{
-
   text-decoration: none;
-  color: crimson;
-  font-weight:bolder;
+  color: white;
+  padding: 2px;
 }
