--- a/view/src/App.css
+++ b/view/src/App.css
@@ -3,16 +3,20 @@
 }
 
 body {
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgba(14, 13, 13, 0.212);
-  /* background-image: url('../src/uploads/IMG-20210530-WA0004.jpg' );
+  background-color: rgba(14, 13, 13, 0.212); 
+
+   /* background-image: url('../src/uploads/IMG-20210530-WA0004.jpg' );
   background-repeat: no-repeat;
   background-size:auto; */
+
+
 }
 
 code {
@@ -25,3 +29,253 @@ a{
   color: white;
   padding: 2px;
 }
+
+
+.mail_overlay {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(8, 8, 8, 0.877);
+  opacity: .9;
+  z-index: 2;
+  overflow: hidden;
+}
+
+
+.contact-form {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+
+form .form-input {
+  display: flex;
+  flex-direction: column;
+  align-items:center ;
+  flex-wrap: wrap;
+}
+
+
+
+
+.form-input input[type="text"], .form-input input[type="password"], .form-input input[type="email"]{
+
+
+  margin: 10px;
+  outline: none;
+  height: 4em;
+  width: 20em;
+  text-align: center;
+  border: 1px solid rgb(255, 217, 0);
+  border-radius: 16px;
+  background-color: rgb(7, 7, 7);
+  color: white;
+  font-weight: bold;
+  font-size: .7em;
+  transition: .25s;
+}
+
+.form-input input[type="text"]:focus, .form-input input[type="password"]:focus, .form-input input[type="email"]:focus{
+transform: scale(1.2);
+}
+.button {
+  height: 4em;
+  width: 10em;
+
+  border-radius: 16px;
+  background-color: transparent;
+  letter-spacing: .1em;
+  font-weight: 500;
+  font-size: 1em;
+  color: white;
+  margin-top: 10px;
+  cursor: pointer;
+  transition: .25s ease-in;
+}
+
+.submit{
+  border:1px solid green ;
+}
+#cancel{
+  border:1px solid red ; 
+}
+
+.submit:hover{
+ background-color: rgba(4, 247, 4, 0.623);
+
+}
+
+span #cancel:hover{
+ background-color: rgba(255, 0, 0, 0.63);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* stolenn..... */
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: linear-gradient(to right, #b92b27, #1565c0)
+}
+
+.card {
+  margin-bottom: 20px;
+  border: none
+}
+
+.box {
+  width: 500px;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: #191919;
+  ;
+  text-align: center;
+  transition: 0.25s;
+  margin-top: 100px
+}
+
+.box input[type="text"],
+.box input[type="password"] {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 10px 10px;
+  width: 250px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s
+}
+
+.box h1 {
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500
+}
+
+.box input[type="text"]:focus,
+.box input[type="password"]:focus {
+  width: 300px;
+  border-color: #2ecc71
+}
+
+.box input[type="submit"] {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #2ecc71;
+  padding: 14px 40px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+  cursor: pointer
+}
+
+.box input[type="submit"]:hover {
+  background: #2ecc71
+}
+
+.forgot {
+  text-decoration: underline
+}
+
+ul.social-network {
+  list-style: none;
+  display: inline;
+  margin-left: 0 !important;
+  padding: 0
+}
+
+ul.social-network li {
+  display: inline;
+  margin: 0 5px
+}
+
+.social-network a.icoFacebook:hover {
+  background-color: #3B5998
+}
+
+.social-network a.icoTwitter:hover {
+  background-color: #33ccff
+}
+
+.social-network a.icoGoogle:hover {
+  background-color: #BD3518
+}
+
+.social-network a.icoFacebook:hover i,
+.social-network a.icoTwitter:hover i,
+.social-network a.icoGoogle:hover i {
+  color: #fff
+}
+
+a.socialIcon:hover,
+.socialHoverClass {
+  color: #44BCDD
+}
+
+.social-circle li a {
+  display: inline-block;
+  position: relative;
+  margin: 0 auto 0 auto;
+  border-radius: 50%;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  font-size: 20px
+}
+
+.social-circle li i {
+  margin: 0;
+  line-height: 50px;
+  text-align: center
+}
+
+.social-circle li a:hover i,
+.triggeredHover {
+  transform: rotate(360deg);
+  transition: all 0.2s
+}
+
+.social-circle i {
+  color: #fff;
+  transition: all 0.8s;
+  transition: all 0.8s
+}
+
+
+
+
+
+
